--- a/discovered-app/package.json
+++ b/discovered-app/package.json
@@ -14,6 +14,10 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+  "node": "17.1.0",
+  "npm": "8.1.3"
+},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
